SWC-6768: use JUnit5 and use test file to compare template output